tests/baselines/reference/parserRegularExpressionDivideAmbiguity2.errors.txt
parserRegularExpressionDivideAmbiguity2.ts(1,6): error TS2552: Cannot find name 'notregexp'. Did you mean 'RegExp'?
parserRegularExpressionDivideAmbiguity2.ts(1,16): error TS2304: Cannot find name 'a'.


==== parserRegularExpressionDivideAmbiguity2.ts (2 errors) ====
    (1) /notregexp/a.foo();
         ~~~~~~~~~
!!! error TS2552: Cannot find name 'notregexp'. Did you mean 'RegExp'?
!!! related TS2728 lib.es5.d.ts:--:--: 'RegExp' is declared here.
                   ~
!!! error TS2304: Cannot find name 'a'.